2008-04-12  Sebastien Pouliot  <sebastien@ximian.com> 

	* ConsoleRunner.cs: Don't annotate assembly.
	* XmlResultWriter.cs: We don't need annotations to get the original
	filename of the assembly.

2008-04-12  Sebastien Pouliot  <sebastien@ximian.com>

	* TextResultWriter.cs: By default add some colors to our display
	private method is used in its declaring type's nested type(s)
	[Cedric Vivier]. Original patch modified to a darker scheme
	(default) for crazy people, like me, with a light background.
	Change default using GENDARME_COLOR=[dark|light|none] gendarme ...

2008-04-06  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsoleRunner.cs: Report all errors using a byte (instead of an
	int) to satisfy ExitCodeIsLimitedOnUnixRule. Display a warning if
	no rule is selected for analysis (instead of displaying nothing).

2008-03-30  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsoleRunner.cs: Fix default value for 'rule_set' so that the 
	--set command line option does not need to be specified (in this 
	case the rule set "default" will be used).
	* Settings.cs: If not specified look for the "rules.xml" file that
	resides with the runner.

2008-03-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* Options.cs: Update to version 0.2.0
	* HtmlResultWriter.cs: Try harder to find the XSLT in the assembly 
	resource files.

2008-03-04  Sebastien Pouliot  <sebastien@ximian.com>

	* HtmlResultWriter.cs, ResultWriter.cs, TextResultWriter.cs,
	XmlResultWriter.cs: Rework IDisposable to reduce duplication.

2008-02-17  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsoleRunner.cs: Split with Settings and add support for ignoring
	defects based on a user supplied list.
	* IgnoreFileList.cs: New. File-based ignore list.
	* Settings.cs: New. Configuration support for runner.
	* console.mdp: Update MonoDevelop project file.
	* Makefile.am: Update build file.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com> 
